vlib/v/checker/tests/inout/left_shift_err.out
vlib/v/checker/tests/inout/left_shift_err.v:3:7: error: cannot shift type string into array_int
    1| fn main() {
    2|     l := []int
    3|     l << 'test'
                ~~~~~~
    4| }