vlib/v/checker/tests/inout/left_shift_err.vv
fn main() {
	l := []int
	l << 'test'
}
